AP-16729: Add password support to Writer and Cell Updater
AP-16729 (Support writing of password protected Excel files (Excel Writer))